Fix garbage collection comparison.